--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -45,7 +45,7 @@ const schemas = JSON_LD_EXTRA_ENABLED
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="/favicon.jpg" type="image/jpeg" />
   <title>{title}</title>
   <meta name="description" content={description} />
   <link rel="canonical" href={pageUrl} />
